--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -278,7 +278,7 @@ html {
 
 
             .header-btn1-div {
-                background-image: url(/img/Rectangle\ 6.png);
+                background-image: url(/img/Rectangle6.png);
 
                 .header-btn1 {
                     cursor: pointer;
